[collect] delete retry data construction logic, add details in README

--- a/collect/augment_config.json
+++ b/collect/augment_config.json
@@ -9,7 +9,7 @@
             "reason": 5,
             "reason_no_history": 5,
             "grounder": 1,
-            "other": 1
+            "default": 1
         }
     }
 ]
