[collect] adjust train/val split and task generalization strategies, rename augment config field

--- a/collect/augment_config.json
+++ b/collect/augment_config.json
@@ -6,8 +6,8 @@
         ],
         "pattern": "swipe",
         "multiplier": {
-            "reason": 5,
-            "reason_no_history": 5,
+            "decider": 5,
+            "decider_no_history": 5,
             "grounder": 1,
             "default": 1
         }
