feat: add manual collect for Harmony -  Implement device abstraction layer for manual data collection - Added `device.py` to define abstract base class `Device` and its implementations for Android and Harmony devices. - Integrated device initialization and connection handling in `server.py`. - Created a new server start script `start.py` for easier server management. - Added a shell script `start_server.sh` for launching the server with dependency checks. - Enhanced the frontend with device selection and connection status display in `index.html` and corresponding styles in `style.css`.

--- a/.gitignore
+++ b/.gitignore
@@ -10,15 +10,19 @@ data_log/
 weights/
 
 utils/experience/BAAI/
+.venv/
+utils/experience/BAAI/
+utils/experience/all-MiniLM-L6-v2/
 data-*
 new_data/
 vectordb/
-utils/experience/all-MiniLM-L6-v2/
-runner/mobiagent/data-*
-runner/HarmonyOS-mobiagent/
 RAG/
 utils/experience/BAAI/
 
 output*/
 utils/experience/multistage_plans_storage
 utils/experience/singletask_storage
+runner/HarmonyOS-mobiagent/
+runner/UI-TARS-agent/data_uitars-test/
+tasks/
+utils/experience/templates-new-bak.json
