--- a/agent_rr/requirements-agentrr.txt
+++ b/agent_rr/requirements-agentrr.txt
@@ -1,10 +1,12 @@
 scikit-image
 torch
-sentence-transformers
-transformers
+sentence-transformers>=2.7.0
+transformers>=4.51.0
 scikit-learn
-numpy
+numpy==1.26.4
 torchvision
-supervision
+supervision==0.18.0
 paddleocr
 paddlepaddle
+openai
+accelerate
