--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
 # torch
 torch
 torchvision
-torchaudio
 
 # PaddlePaddle and OCR
 paddlepaddle
-paddleocr==2.10.0
+paddleocr>=2.10.0
 pytesseract
 
 # Computer Vision and ML
 ultralytics
-transformers==4.47.0
+transformers>=4.47.0
 supervision
 
 # Image Processing
@@ -42,3 +41,4 @@ llama-index
 llama-index-embeddings-huggingface
 pandas
 hmdriver2
+mem0ai
