feat(mobiagent): Refactor task handling and enhance model interaction in mobiagent
- Introduced robust JSON parsing and validation functions to enhance error handling and response integrity.
- Implemented retry logic with temperature adjustments for model API calls to improve response reliability.
- Enhanced swipe functionality with dynamic coordinate calculations based on image dimensions.

feat(annotate): Enhance annotation functionality and optimize task description processing
- Add reasoning quantity verification to ensure the correct quantity of react is output for non-final batches.
- Modify the system prompt template to the enhanced version of annotation_zh_general-gpt.md.
- Add a skipping prompt when react.json exists.
- Correct the processing logic when the task description is in the form of a list.

fix(config): Adjust data augmentation configuration and action verification

feat(manual): Expand the list of device support and applications

docs(prompts): Update prompt templates and operation space definitions
- Create enhanced version of the annotation_zh_general-gpt.md prompt template
- Update the definition of the DONE action in annotation_zh_general.md
- Add support for wait operations and adjust related descriptions
- Add advertising processing rules in auto_decider.md
- Update the application list and default application markers in the planner template

--- a/collect/augment_config.json
+++ b/collect/augment_config.json
@@ -41,6 +41,18 @@
     },
     {
         "dir": [
+            "reasoning"
+        ],
+        "pattern": "黑屏",
+        "multiplier": {
+            "decider": 5,
+            "decider_no_history": 5,
+            "grounder": 1,
+            "default": 1
+        }
+    },
+    {
+        "dir": [
             "function",
             "name"
         ],
@@ -83,8 +95,8 @@
         ],
         "pattern": "wait",
         "multiplier": {
-            "decider": 12,
-            "decider_no_history": 12,
+            "decider": 3,
+            "decider_no_history": 3,
             "grounder": 1,
             "default": 1
         }
